--- a/app.css
+++ b/app.css
@@ -26,7 +26,7 @@ body {
 
 .aminoedit-pane {
   width: 85vw;
-  height: 100%;
+  height: 474px;
   background-color: #e9e2cb;
   position: absolute;
   padding-top: 5px;
@@ -90,6 +90,7 @@ body {
   margin-top: -32px;
   margin-left: 25px;
   color: #ababab;
+  cursor: pointer;
 }
 
 .nucleotideCycle.down {
@@ -142,9 +143,10 @@ body {
 .proteinindicator-description {
   position: absolute;
   display: none;
-  margin-top: 65px;
+  margin-top: 40px;
   width: 100%;
   font-family: 'Helvetica', sans-serif;
+  font-size: .9rem;
 }
 
 .proteinindicator-description:before {
@@ -180,9 +182,9 @@ body {
 
 .proteininject-button:before {
   position: absolute;
-  content: 'Inject Protein';
+  content: 'Inject Oncovirus';
   text-align: center;
-  margin: auto 23%;
+  margin: auto 13%;
   margin-top: 10%;
   font-size: 3rem;
   color: #ffffff;
@@ -190,4 +192,33 @@ body {
 
 .proteininject-button:active {
   background-color: #0288d1;
+}
+
+.directions-pane {
+  position: absolute;
+  display: none;
+  width: 100%;
+  right: 0;
+  z-index: 50;
+  background-color: #fcf4dc;
+  border-style: solid;
+  border-color: #fcf4dc;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.directions-pane p {
+  white-space: pre-wrap;
+  padding: 10px;
+}
+
+.directions-next {
+  margin: 10px;
+  cursor: pointer;
+}
+
+.directions-close {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
